--- a/payments/package.json
+++ b/payments/package.json
@@ -20,6 +20,7 @@
     "@module-federation/rsbuild-plugin": "^0.9.0",
     "@rsbuild/core": "^1.2.8",
     "@rsbuild/plugin-react": "^1.1.0",
+    "@rsbuild/plugin-type-check": "^1.2.1",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.9",
     "@types/react-dom": "^19.0.3",
