--- a/payments/package.json
+++ b/payments/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@module-federation/enhanced": "^0.9.0",
+    "@types/ramda": "^0.30.2",
+    "ramda": "0.20.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
