--- a/user-profile/package.json
+++ b/user-profile/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@module-federation/enhanced": "^0.9.0",
     "@mui/material": "^6.4.5",
+    "@types/ramda": "^0.30.2",
+    "ramda": "^0.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
